--- a/index.html
+++ b/index.html
@@ -125,17 +125,25 @@ function cancelPayment(payment) {
         const paymentCallbacks = {
             onReadyForServerApproval: async (paymentId) => {
                 console.log("支付等待批准:", paymentId);
-                const response = await fetch("https://tubular-kelpie-4997f4.netlify.app/.netlify/functions/approvePayment", {
-                    method: "POST",
-                    headers: { "Content-Type": "application/json" },
-                    body: JSON.stringify({ paymentId, uid: currentUser.uid }) // 传递 uid
-                });
-                const result = await response.json();
-                if (result.success) {
-                    console.log("支付已批准，交易ID:", result.txid);
-                } else {
-                    console.error("支付批准失败:", result.error);
-                }
+                 try {
+        const response = await fetch("https://tubular-kelpie-4997f4.netlify.app/.netlify/functions/approvePayment", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({ paymentId, uid: currentUser.uid }) // 传递 uid
+        });
+
+        const result = await response.json();
+        
+        if (result.success) {
+            console.log("✅ 支付已批准，交易 ID:", result.txid);
+        } else {
+            console.error("❌ 支付批准失败:", result.error);
+            alert("支付失败: " + result.error); // 让用户看到具体错误信息
+        }
+    } catch (error) {
+        console.error("❌ 网络或服务器错误:", error);
+        alert("支付失败: 服务器错误，请稍后再试。");
+    }
             },
             onReadyForServerCompletion: async (paymentId, txid) => {
                 console.log("支付完成，通知后端:", paymentId, txid);
