--- a/index.html
+++ b/index.html
@@ -139,21 +139,21 @@ function cancelPayment(payment) {
             },
             onReadyForServerCompletion: async (paymentId, txid) => {
                 console.log("支付完成，通知后端:", paymentId, txid);
-                const response = await fetch("https://tubular-kelpie-4997f4.netlify.app/.netlify/functions/completePayment", {
-                    method: "POST",
-                    headers: { "Content-Type": "application/json" },
-                    body: JSON.stringify({
-            payment_id: payment_id,
-            txid: txid
-        })
-                });
 
-                const result = await response.json();
-                if (result.success) {
-                    alert("支付成功！交易ID: " + txid);
-                } else {
-                    alert("支付完成通知失败: " + result.error);
-                }
+    try {
+        const response = await fetch("https://tubular-kelpie-4997f4.netlify.app/.netlify/functions/completepayment", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({ payment_id: paymentId, txid: txid })
+        });
+
+        if (!response.ok) throw new Error(`HTTP 错误! 状态码: ${response.status}`);
+
+        const result = await response.json();
+        console.log("✅ 支付完成结果:", result);
+    } catch (error) {
+        console.error("❌ 支付请求失败:", error);
+    }
             },
             onCancel: (paymentId) => {
                 alert("用户取消支付");
